--- a/source/animation.html
+++ b/source/animation.html
@@ -14,8 +14,14 @@
       rel="stylesheet"
     />
     <title>DLK Animation</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, animation"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -41,95 +47,132 @@
         </ul>
       </div>
       <section class="animation">
+        <h2 class="hidden-item">Animation</h2>
         <img
           src="../../img/images/animation/downtown.png"
           alt="Town"
           class="animation__town"
+          width="1663"
+          height="630"
         />
         <img
           src="../../img/images/animation/sun.png"
           alt="Sun"
           class="animation__sun"
+          width="60"
+          height="59"
         />
         <img
           src="../../img/images/animation/cloud1.png"
           alt="Cloud 1"
           class="animation__cloud1"
+          width="92"
+          height="27"
         />
         <img
           src="../../img/images/animation/cloud2.png"
           alt="Cloud 2"
           class="animation__cloud2"
+          width="187"
+          height="40"
         />
         <img
           src="../../img/images/animation/cloud2.png"
           alt="Cloud 3"
           class="animation__cloud3"
+          width="187"
+          height="40"
         />
         <img
           src="../../img/images/animation/cloud2.png"
           alt="Cloud 4"
           class="animation__cloud4"
+          width="187"
+          height="40"
         />
         <img
           src="../../img/images/animation/cloud1.png"
           alt="Cloud 5"
           class="animation__cloud5"
+          width="92"
+          height="27"
         />
         <img
           src="../../img/images/animation/cloud2.png"
           alt="Cloud 6"
           class="animation__cloud6"
+          width="187"
+          height="40"
         />
         <img
           src="../../img/images/animation/car1.png"
           alt="Car 1"
           class="animation__car1"
+          width="251"
+          height="100"
         />
         <img
           src="../../img/images/animation/car1-wheel.png"
           alt="Car 1 wheel"
           class="animation__car1-wheel-1"
+          width="45"
+          height="45"
         />
         <img
           src="../../img/images/animation/car1-wheel.png"
           alt="Car 1 wheel"
           class="animation__car1-wheel-2"
+          width="45"
+          height="45"
         />
         <img
           src="../../img/images/animation/car2.png"
           alt="Car 2"
           class="animation__car2"
+          width="205"
+          height="97"
         />
         <img
           src="../../img/images/animation/car2-wheel.png"
           alt="Car 2 wheel"
           class="animation__car2-wheel-1"
+          width="32"
+          height="33"
         />
         <img
           src="../../img/images/animation/car2-wheel.png"
           alt="Car 2 wheel"
           class="animation__car2-wheel-2"
+          width="32"
+          height="33"
         />
         <img
           src="../../img/images/animation/car3.png"
           alt="Car 3"
           class="animation__car3"
+          width="247"
+          height="66"
         />
         <img
           src="../../img/images/animation/car2-wheel.png"
           alt="Car 3 wheel"
           class="animation__car3-wheel-1"
+          width="32"
+          height="33"
         />
         <img
           src="../../img/images/animation/car2-wheel.png"
           alt="Car 3 wheel"
           class="animation__car3-wheel-2"
+          width="32"
+          height="33"
         />
         <img
           src="../../img/images/animation/car4.png"
           alt="Car 4"
           class="animation__car4"
+          width="269"
+          height="127"
         />
         <img
           src="../../img/images/animation/car4-wheel.png"
@@ -140,61 +183,85 @@
           src="../../img/images/animation/car4-wheel.png"
           alt="Car 4 wheel"
           class="animation__car4-wheel-2"
+          width="50"
+          height="50"
         />
         <img
           src="../../img/images/animation/lantern-gray.png"
           alt="Lantern gray"
           class="animation__lantern"
+          width="151"
+          height="396"
         />
         <img
           src="../../img/images/animation/lantern-gray.png"
           alt="Lantern gray"
           class="animation__lantern2"
+          width="151"
+          height="396"
         />
         <img
           src="../../img/images/animation/lanterns-color.png"
           alt="Lantern color"
           class="animation__lantern-color"
+          width="215"
+          height="563"
         />
         <img
           src="../../img/images/animation/taxi.png"
           alt="Taxi"
           class="animation__taxi"
+          width="887"
+          height="267"
         />
         <img
           src="../../img/images/animation/taxi-wheel.png"
           alt="Taxi wheel"
           class="animation__taxi-wheel-1 animation__taxi-wheels"
+          width="71"
+          height="71"
         />
         <img
           src="../../img/images/animation/taxi-wheel.png"
           alt="Taxi wheel"
           class="animation__taxi-wheel-2 animation__taxi-wheels"
+          width="71"
+          height="71"
         />
         <img
           src="../../img/images/animation/woman.png"
           alt="Woman"
           class="animation__woman"
+          width="192"
+          height="269"
         />
         <img
           src="../../img/images/animation/woman-hand.png"
           alt="Woman hand"
           class="animation__woman-hand"
+          width="63"
+          height="45"
         />
         <img
           src="../../img/images/animation/skirt.png"
           alt="Woman skirt"
           class="animation__skirt"
+          width="98"
+          height="60"
         />
         <img
           src="../../img/images/animation/man.png"
           alt="Man"
           class="animation__man"
+          width="205"
+          height="354"
         />
         <img
           src="../../img/images/animation/man-hand.png"
           alt="Man hand"
           class="animation__man-hand"
+          width="89"
+          height="129"
         />
         <div class="animation__message-1">
           <p class="animation__message-cloud-left">
