--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,14 @@
       rel="stylesheet"
     />
     <title>DLK Catalog</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, position"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -52,6 +58,8 @@
                   <img
                     src="../img/images/apparelKids-1x.jpg"
                     alt="Apparel kids image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -72,6 +80,8 @@
                   <img
                     src="../img/images/holidayShop-1x.jpg"
                     alt="Holiday shop image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -92,6 +102,8 @@
                   <img
                     src="../img/images/toys-1x.jpg"
                     alt="Toys image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -112,6 +124,8 @@
                   <img
                     src="../img/images/accessories-1x.jpg"
                     alt="Accessories image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -132,6 +146,8 @@
                   <img
                     src="../img/images/sale-1x.jpg"
                     alt="Sale image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -152,6 +168,8 @@
                   <img
                     src="../img/images/apparelAdults-1x.jpg"
                     alt="Apparel adults image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
