--- a/source/contactUs.html
+++ b/source/contactUs.html
@@ -13,8 +13,14 @@
       rel="stylesheet"
     />
     <title>DLK Contact Us</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, form"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
