--- a/source/grid.html
+++ b/source/grid.html
@@ -15,8 +15,14 @@
       rel="stylesheet"
     />
     <title>DLK Grid</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, grid"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -42,6 +48,7 @@
         </ul>
       </div>
       <section class="grid font-grid">
+        <h2 class="hidden-item">Grid</h2>
         <article class="grid-learn-more grid-container">
           <h2 class="grid-learn-more__notice">Learn more</h2>
           <h2 class="grid-learn-more__title">
@@ -69,6 +76,8 @@
             <img
               src="../img/images/iphone6s-1x.jpg"
               alt="IPHONE 6S photo"
+              width="224"
+              height="345"
               class="grid-iphone__image"
             />
           </picture>
@@ -84,6 +93,8 @@
             <img
               src="../img/images/keyboard-1x.png"
               alt="Keyboard"
+              width="314"
+              height="164"
               class="grid-keyboard__image"
             />
           </picture>
@@ -101,6 +112,8 @@
             <img
               src="../img/images/gamepad-1x.png"
               alt="Gamepad photo"
+              width="303"
+              height="167"
               class="grid-games-ourpasion__image"
             />
           </picture>
@@ -123,6 +136,8 @@
               <img
                 src="../img/images/imac-1x.png"
                 alt="imac photo"
+                width="384"
+                height="164"
                 class="grid-i-mac__image"
               />
             </picture>
@@ -149,11 +164,14 @@
             <img
               src="../img/images/ipad-1x.png"
               alt="ipad photo"
+              width="375"
+              height="147"
               class="grid-i-pad__image"
             />
           </picture>
         </article>
         <article class="grid-follow-me">
+          <h2 class="hidden-item">Follow me</h2>
           <svg
             width="59"
             height="59"
@@ -193,6 +211,8 @@
               <img
                 src="../img/images/diskette-1x.png"
                 alt="Diskette photo"
+                width="180"
+                height="187"
                 class="grid-i-cloud__image"
               />
             </picture>
@@ -207,6 +227,7 @@
           <a href="#" class="grid-i-cloud__link">Learn more</a>
         </article>
         <article class="grid-tv grid-container">
+          <h2 class="hidden-item">Follow me</h2>
           <picture class="grid-tv__picture">
             <source
               srcset="../img/images/tv-1x.png 1x, ../img/images/tv-2x.png 2x"
@@ -214,6 +235,8 @@
             <img
               src="../img/images/tv-1x.png"
               alt="Diskette photo"
+              width="271"
+              height="215"
               class="grid-tv__image"
             />
           </picture>
