--- a/source/index.html
+++ b/source/index.html
@@ -12,8 +12,14 @@
       rel="stylesheet"
     />
     <title>DLK</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -76,6 +82,8 @@
                   <img
                     src="../img/images/apparelKids-1x.jpg"
                     alt="Apparel kids image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -96,6 +104,8 @@
                   <img
                     src="../img/images/holidayShop-1x.jpg"
                     alt="Holiday shop image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -116,6 +126,8 @@
                   <img
                     src="../img/images/toys-1x.jpg"
                     alt="Toys image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -136,6 +148,8 @@
                   <img
                     src="../img/images/accessories-1x.jpg"
                     alt="Accessories image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -156,6 +170,8 @@
                   <img
                     src="../img/images/sale-1x.jpg"
                     alt="Sale image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -176,6 +192,8 @@
                   <img
                     src="../img/images/apparelAdults-1x.jpg"
                     alt="Apparel adults image"
+                    width="280"
+                    height="270"
                     class="category__img"
                   />
                 </picture>
@@ -225,6 +243,8 @@
             <img
               src="../img/images/woman-desktop-1x.jpg 1x, ../img/images/woman-desktop-2x.jpg 2x"
               class="service__img"
+              width="480"
+              height="559"
               alt="lady in dress"
             />
           </picture>
@@ -277,6 +297,8 @@
                 <img
                   src="../source/img/images/mailRU-1x.png"
                   class="partners__logo"
+                  width="193"
+                  height="60"
                   alt="mail.ru logo"
                 />
               </picture>
@@ -292,6 +314,8 @@
                 <img
                   src="../img/images/apple-1x.png"
                   class="partners__logo"
+                  width="179"
+                  height="61"
                   alt="Apple logo"
                 />
               </picture>
@@ -307,6 +331,8 @@
                 <img
                   src="../img/images/eltexLogo-1x.png"
                   class="partners__logo"
+                  width="216"
+                  height="46"
                   alt="Eltex logo"
                 />
               </picture>
@@ -322,6 +348,8 @@
                 <img
                   src="../img/images/owoxLogo-1x.png"
                   class="partners__logo"
+                  width="211"
+                  height="40"
                   alt="Owox logo"
                 />
               </picture>
@@ -347,7 +375,7 @@
               have flown by. It's simply magical.
             </p>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.550878921675!2d49.28804361598429!3d53.51221786997467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879ed1ada6fbd%3A0x751234490b1ca980!2sDirect%20Line%20Digital!5e0!3m2!1sru!2sru!4v1661322303423!5m2!1sru!2sru"
+              src="https://www.google.com/maps/d/embed?mid=1MnkH4XKWwgE2A8xW5eUg2eSHhDvjIK4&ehbc=2E312F"
               width="483"
               height="196"
               style="border: 0"
