--- a/source/toys.html
+++ b/source/toys.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
     <title>DLK Toys</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta name="description" content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик" />
+    <meta name="keywords" content="Frontend, gulp, javascript, css, scss, html, flexbox, checkbox, radio-button" />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -166,9 +166,18 @@
           <ul class="toys-catalog__list">
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/sharkBag-1x.png 1x,
+                      ../img/images/sharkBag-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/sharkBag.png"
+                  src="../img/images/sharkBag-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <div class="product__link font-title">
@@ -180,9 +189,18 @@
             </li>
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/brass-1x.png 1x,
+                      ../img/images/brass-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/brass.png"
+                  src="../img/images/brass-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <h2 class="product__title">BRASS DECO FRAMES</h2>
@@ -191,9 +209,18 @@
             </li>
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/cibo-1x.png 1x,
+                      ../img/images/cibo-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/cibo.png"
+                  src="../img/images/cibo-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <h2 class="product__title">CIBO FULL APRON</h2>
@@ -202,9 +229,18 @@
             </li>
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/gatcha-1x.png 1x,
+                      ../img/images/gatcha-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/gatcha.png"
+                  src="../img/images/gatcha-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <h2 class="product__title">GATCHA GATCHA GUMBALL MACHINE</h2>
@@ -213,9 +249,18 @@
             </li>
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/candle-1x.png 1x,
+                      ../img/images/candle-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/candle.png"
+                  src="../img/images/candle-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <h2 class="product__title">CHRISTMAS ADVENT SCENTED CANDLE</h2>
@@ -224,9 +269,18 @@
             </li>
             <li class="toys-catalog__list-item">
               <article class="product">
+                <picture class="toys-catalog__picture">
+                  <source
+                    srcset="
+                      ../img/images/tangle-1x.png 1x,
+                      ../img/images/tangle-2x.png 2x
+                    "
+                  />
                 <img
-                  src="../img/images/tangle.png"
+                  src="../img/images/tangle-1x.png"
                   class="toys-catalog__img"
+                  width="380"
+                  height="385"
                   alt="sharky img"
                 />
                 <h2 class="product__title">TANGLE SPINNING TEA LIGHT</h2>
