--- a/source/blog.html
+++ b/source/blog.html
@@ -13,8 +13,14 @@
       rel="stylesheet"
     />
     <title>DLK Blog</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, flexfox"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
@@ -46,6 +52,8 @@
                 <img
                   src="../img/images/legoMess.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="lego img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -65,6 +73,8 @@
                 <img
                   src="../img/images/animalsToys.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="animals toys img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -81,6 +91,8 @@
                 <img
                   src="../img/images/organizedToys.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="organized toys img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -100,6 +112,8 @@
                 <img
                   src="../img/images/buzLighter.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="Buz-lighter img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -116,6 +130,8 @@
                 <img
                   src="../img/images/princessToy.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="princess toy img"
                 />
                 <span class="articles__date">23rd August 2018</span>
@@ -135,6 +151,8 @@
                 <img
                   src="../img/images/dice.jpg"
                   class="articles__img"
+                  width="380"
+                  height="220"
                   alt="dice img"
                 />
                 <span class="articles__date">23rd August 2018</span>
