--- a/source/bootstrap.html
+++ b/source/bootstrap.html
@@ -24,8 +24,14 @@
       rel="stylesheet"
     />
     <title>DLK Bootstrap</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, bootstrap"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
