--- a/source/svg.html
+++ b/source/svg.html
@@ -15,8 +15,14 @@
       rel="stylesheet"
     />
     <title>DLK SVG</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <meta
+      name="description"
+      content="Данный сайт сверстал студент курса по изучению специальности Frontend-разработчик"
+    />
+    <meta
+      name="keywords"
+      content="Frontend, gulp, javascript, css, scss, html, svg, animation"
+    />
     <script>
       var docElement = document.documentElement;
       docElement.className =
